Improve Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - "2.2.3"
 before_script:
   - mv config/database_travis.yml config/database.yml
+  - mv config/secrets_travis.yml config/secrets.yml
   - mysql -e 'create database walter_bishop'
   - bundle exec rake db:migrate
 script: bundle exec rspec spec
